changed some colors and accessibility

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -22,6 +22,14 @@
 	transform-origin: 70% 70%; /* Pivot around the bottom-left palm */
 }
 
+.bg-really-dark-purple {
+	background-color: rgb(29, 25, 41);
+}
+
+.border-purple-custom {
+	border-color: hsl(255, 24%, 20%);
+}
+
 @keyframes shake {
 	0% {
 		transform: rotate(0deg);
